--- a/project1/classpage/classpage.html
+++ b/project1/classpage/classpage.html
@@ -38,39 +38,39 @@
       <div class="container">
         <div class="row">
           <div class="card">
-            <img src="img/pic1.jpeg" alt="pic1">
+            <img src="../img/pic1.jpeg" alt="pic1">
             <p class="card-text">Bobby J</p>
           </div>
           <div class="card">
-            <img src="img/pic2.jpeg" alt="Card image cap">
+            <img src="../img/pic2.jpeg" alt="Card image cap">
             <p class="card-text">Daniel Tyson</p>
           </div>
           <div class="card">
-            <img src="img/pic3.jpeg" alt="Card image cap">
+            <img src="../img/pic3.jpeg" alt="Card image cap">
             <p class="card-text">John Septen</p>
           </div>
           <div class="card">
-            <img src="img/pic4.jpeg" alt="Card image cap">
+            <img src="../img/pic4.jpeg" alt="Card image cap">
             <p class="card-text">Wally O.</p>
           </div>
           <div class="card">
-            <img src="img/pic5.jpeg" alt="Card image cap">
+            <img src="../img/pic5.jpeg" alt="Card image cap">
             <p class="card-text">Lynn Jenner</p>
           </div>
           <div class="card">
-            <img src="img/pic6.jpeg" alt="Card image cap">
+            <img src="../img/pic6.jpeg" alt="Card image cap">
             <p class="card-text">Casey Wako</p>
           </div>
           <div class="card">
-            <img src="img/pic7.jpeg" alt="Card image cap">
+            <img src="../img/pic7.jpeg" alt="Card image cap">
             <p class="card-text">Geoff Sesh</p>
           </div>
           <div class="card">
-            <img src="img/pic10.jpeg" alt="Card image cap">
+            <img src="../img/pic10.jpeg" alt="Card image cap">
             <p class="card-text">Danni T.</p>
           </div>
           <div class="card">
-            <img src="img/pic9.jpeg" alt="Card image cap">
+            <img src="../img/pic9.jpeg" alt="Card image cap">
             <p class="card-text">Orrin H.</p>
           </div>
         </div>
