--- a/project1/homepage/home.html
+++ b/project1/homepage/home.html
@@ -25,20 +25,41 @@
   </div>
   <div class="col-md-3">
     <div class="navbar navbar-default navbar-fixed-side">
-      <div class="row">
-        <form class="navbar-search pull-left">
-          <input type="text" class="search-query" placeholder="Search Classes">
+      <div class="row no-margin">
+        <form class="navbar-search">
+          <input type="text" class="search-query full" placeholder="Search Classes">
         </form>
       </div>
 
       <div class="row">
-        <div class="btn-group btn-group-vertical full">
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <p class="panel-title">
+                  <a data-toggle="collapse" href="#current_class_dropdown" role="button" aria-expanded="false" aria-controls="collapseExample">Link with href</a>
+              </p>
+            </div>
+            <div id="current_class_dropdown" class="collapse">
+              <ul class="list-group">
+                <li class="list-group-item">A</li>
+                <li class="list-group-item">B</li>
+<!--                 <li class="list-group-item"><button class="btn">CS 121</button></li>
+                <li class="list-group-item"><button class="btn">MA 131</button></li>
+                <li class="list-group-item"><button class="btn">PH 151</button></li>
+                <li class="list-group-item"><button class="btn">CH 111</button></li>
+                <li class="list-group-item"><button class="btn">CW 100</button></li>
+ -->              </ul>
+              <div class="panel-footer">Footer</div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="btn-group btn-group-vertical full">
           <button class="btn">CS 121</button>
           <button class="btn">MA 131</button>
           <button class="btn">PH 151</button>
           <button class="btn">CH 111</button>
           <button class="btn">CW 100</button>
-        </div>
+        </div> -->
       </div>
       <div class="row">
          
@@ -61,6 +82,7 @@
     </div>
   </footer>
 
+
   <!-- Bootstrap core JavaScript
       ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
@@ -69,15 +91,15 @@
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
     crossorigin="anonymous"></script>
-  <script src="../../assets/js/vendor/holder.min.js"></script>
+  <script src="../js/vendor/holder.min.js"></script>
   <script>
     $(function () {
       Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
     });
   </script>
-  <script src="../../dist/js/bootstrap.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="../js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
