--- a/project1/homepage/home.html
+++ b/project1/homepage/home.html
@@ -27,43 +27,50 @@
     <div class="navbar navbar-default navbar-fixed-side">
       <div class="row no-margin">
         <form class="navbar-search">
-          <input type="text" class="search-query full" placeholder="Search Classes">
+          <input type="text" class="search-query full" placeholder="Add Classes">
         </form>
       </div>
-
       <div class="row">
         <div class="panel-group">
           <div class="panel panel-default">
             <div class="panel-heading">
               <p class="panel-title">
-                  <a data-toggle="collapse" href="#current_class_dropdown" role="button" aria-expanded="false" aria-controls="collapseExample">Link with href</a>
+                  <a data-toggle="collapse" href="#current_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Current Classes</a>
               </p>
             </div>
-            <div id="current_class_dropdown" class="collapse">
+            <div id="current_class_dropdown" class="collapse in">
               <ul class="list-group">
-                <li class="list-group-item">A</li>
-                <li class="list-group-item">B</li>
-<!--                 <li class="list-group-item"><button class="btn">CS 121</button></li>
+                <li class="list-group-item"><button class="btn">CS 187</button></li>
+                <li class="list-group-item"><button class="btn">MA 132</button></li>
+                <li class="list-group-item"><button class="btn">PH 152</button></li>
+                <li class="list-group-item"><button class="btn">CH 112</button></li>
+                <li class="list-group-item"><button class="btn">AH 101</button></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <p class="panel-title">
+                  <a data-toggle="collapse" href="#past_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Current Classes</a>
+              </p>
+            </div>
+            <div id="past_class_dropdown" class="collapse in">
+              <ul class="list-group">
+                <li class="list-group-item"><button class="btn">CS 121</button></li>
                 <li class="list-group-item"><button class="btn">MA 131</button></li>
                 <li class="list-group-item"><button class="btn">PH 151</button></li>
                 <li class="list-group-item"><button class="btn">CH 111</button></li>
                 <li class="list-group-item"><button class="btn">CW 100</button></li>
- -->              </ul>
-              <div class="panel-footer">Footer</div>
+              </ul>
             </div>
           </div>
         </div>
-        <!-- <div class="btn-group btn-group-vertical full">
-          <button class="btn">CS 121</button>
-          <button class="btn">MA 131</button>
-          <button class="btn">PH 151</button>
-          <button class="btn">CH 111</button>
-          <button class="btn">CW 100</button>
-        </div> -->
       </div>
-      <div class="row">
-         
-      </div>
+
     </div>
   </div>
   <div class="col-md-6">
@@ -88,7 +95,7 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
     crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
     crossorigin="anonymous"></script>
   <script src="../js/vendor/holder.min.js"></script>
@@ -97,9 +104,9 @@
       Holder.addTheme("thumb", { background: "#55595c", foreground: "#eceeef", text: "Thumbnail" });
     });
   </script>
-  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/vendor/bootstrap.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../js/ie10-viewport-bug-workaround.js"></script>
+  <!-- <script src="../js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
 
 </html>
