create some barebone example posts

--- a/project1/homepage/home.html
+++ b/project1/homepage/home.html
@@ -46,7 +46,7 @@
                 <li class="list-group-item"><button class="btn class_btn">MA 132</button></li>
                 <li class="list-group-item"><button class="btn class_btn">PH 152</button></li>
                 <li class="list-group-item"><button class="btn class_btn">CH 112</button></li>
-                <li class="list-group-item"><button class="btn class_btn">AH 101</button></li>
+                <li class="list-group-item"><button class="btn class_btn">AR 101</button></li>
               </ul>
             </div>
           </div>
@@ -89,67 +89,112 @@
             <option>MA 132</option>
             <option>PH 152</option>
             <option>CH 112</option>
-            <option>AH 101</option>
+            <option>AR 101</option>
           </select>
           <button type="button" class="btn btn-primary" id="post_button">Post!</button>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="col-md-3">
-    <div class="navbar navbar-default navbar-fixed-side">
-      <div class="row no-margin">
-        <form class="navbar-search">
-          <input type="text" class="search-query full" placeholder="Search Contacts">
-        </form>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Bobby J</h3>
       </div>
-      <div class="row">
-        <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <p class="panel-title">
-                <a data-toggle="collapse" href="#recent_contacts_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Recently Contacted</a>
-              </p>
-            </div>
-            <div id="recent_contacts_dropdown" class="collapse in">
-              <ul class="list-group">
-                <a><li class="list-group-item"><span class="badge">4</span> Bobby J</li></a>
-                <a><li class="list-group-item"><span class="badge">1</span> Daniel Tyson</li></a>
-                <a><li class="list-group-item"><span class="badge"></span> John Stephen</li></a>
-                <a><li class="list-group-item"><span class="badge">5</span> Wally O.</li></a>
-                <a><li class="list-group-item"><span class="badge">29</span> Lynn Jenner</li></a>
-              </ul>
-            </div>
-          </div>
-        </div>
+      <div class="panel-body">
+        Gee whiz, what a great lecture! Tim Richards delivering a classic once again!
       </div>
-      <div class="row">
-        <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <p class="panel-title">
-                <a data-toggle="collapse" href="#classmates_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Other Classmates</a>
-              </p>
-            </div>
-            <div id="classmates_dropdown" class="collapse in">
-              <ul class="list-group">
-                <a><li class="list-group-item">Casey Wako</li></a>
-                <a><li class="list-group-item">Geoff Sesh</li></a>
-                <a><li class="list-group-item">Danni T.</li></a>
-                <a><li class="list-group-item">Orrin H.</li></a>
-              </ul>
-            </div>
-          </div>
-        </div>
+      <div class="panel-footer">
+        CS 187
       </div>
-
     </div>
-    <footer class="text-muted">
-      <div class="container">
-        <p>WIP: Work-in-Progress</p>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Casey Wako</h3>
       </div>
-    </footer>
+      <div class="panel-body">
+        Darn I'm bored, I can't wait until I get to CS 230 with your boy T.Rich later!
+      </div>
+      <div class="panel-footer">
+        MA 132
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">You</h3>
+      </div>
+      <div class="panel-body">
+        Drew a picture of my favorite professor in Art today!
+      </div>
+      <div class="panel-footer">
+        AR 101
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Lynn Jenner</h3>
+      </div>
+      <div class="panel-body">
+        Physics makes no sense, anyone want to study for the exam later?
+      </div>
+      <div class="panel-footer">
+        PH 152
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-3">
+  <div class="navbar navbar-default navbar-fixed-side">
+    <div class="row no-margin">
+      <form class="navbar-search">
+        <input type="text" class="search-query full" placeholder="Search Contacts">
+      </form>
+    </div>
+    <div class="row">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <p class="panel-title">
+              <a data-toggle="collapse" href="#recent_contacts_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Recently Contacted</a>
+            </p>
+          </div>
+          <div id="recent_contacts_dropdown" class="collapse in">
+            <ul class="list-group">
+              <a><li class="list-group-item"><span class="badge">4</span>Bobby J</li></a>
+              <a><li class="list-group-item"><span class="badge">1</span>Daniel Tyson</li></a>
+              <a><li class="list-group-item"><span class="badge"></span>John Stephen</li></a>
+              <a><li class="list-group-item"><span class="badge">5</span>Wally O.</li></a>
+              <a><li class="list-group-item"><span class="badge">29</span>Lynn Jenner</li></a>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <p class="panel-title">
+              <a data-toggle="collapse" href="#classmates_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample">Other Classmates</a>
+            </p>
+          </div>
+          <div id="classmates_dropdown" class="collapse in">
+            <ul class="list-group">
+              <a><li class="list-group-item">Casey Wako</li></a>
+              <a><li class="list-group-item">Geoff Sesh</li></a>
+              <a><li class="list-group-item">Danni T.</li></a>
+              <a><li class="list-group-item">Orrin H.</li></a>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <footer class="text-muted">
+    <div class="container">
+      <p>WIP: Work-in-Progress</p>
+    </div>
+  </footer>
 
 
   <!-- Bootstrap core JavaScript
