fixed typo, current class -> previous classes

--- a/project1/homepage/home.html
+++ b/project1/homepage/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<tml lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,7 @@
             <div class="panel-heading">
               <a data-toggle="collapse" href="#past_class_dropdown" role="button" aria-expanded="true" aria-controls="collapseExample" class="panel-title">
                 <p class="panel-title">
-                  Current Classes
+                  Previous Classes
                 </p>
               </a>
             </div>
