--- a/project1/classpage/classpage.html
+++ b/project1/classpage/classpage.html
@@ -27,7 +27,7 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">CS 326</h1>
-        <p class="lead text-muted">Check out who's in this class</p>
+        <p>Instructor: <a href="#">Tim Richards</a></p> 
         <p>
           <a href="#" class="btn btn-primary">Go to message feed</a>
         </p>
