--- a/project1/myprofile/myprofile.html
+++ b/project1/myprofile/myprofile.html
@@ -35,6 +35,8 @@
       <div class="container">
         <img class="profile-image" src="../img/pic3.jpeg">
         <p class="profile-title">Sam Minuteman</p>
+        <p class="profile-subheading">Junior</p>
+        <p class="profile-subheading">Computer Science (minor in Math)</p>
         <div class="row">
 
           <div class="col-md-2 col-sm-offset-3">
